# CMake

./: .gitignor  .gitignore  .gitmodules  CMakeLists.txt  SimpleConfig.h.in  main.cpp
docs/: presentation.odp
include/: lib.hpp
include/libcryptographic/: libcryptographic.hpp
include/libsimple/: CMakeLists.txt  lib.cpp  lib.hpp
src/: CMakeLists.txt  lib.cpp  main.cpp
src/libcryptographic/: CMakeLists.txt  libcryptographic.cpp
src/libsimple/: CMakeLists.txt  lib.cpp  lib.hpp
src/main/: CMakeLists.txt  main.cpp
tests/CTest/: CMakeLists.txt
tests/GTest/: CMakeLists.txt  test_libsimple.cpp
